--- a/Assets/CSS/Styles.css
+++ b/Assets/CSS/Styles.css
@@ -1,13 +1,16 @@
 #cabecalho {
-    margin-left: 3em;
-    margin-top: 2.4em;
+    margin: auto;
+    background-color: red;
+    height: 6em;
+    align-items: center;
     padding: 1em;
     display: flex;
     align-content: center;
     justify-content: space-between;
 }
 
-#cabecalho h1 {
+#nome {
+     margin-left: 1.2em;
     font-size: 3em;
 }
 
