--- a/Assets/CSS/dificuldade.css
+++ b/Assets/CSS/dificuldade.css
@@ -1,5 +1,5 @@
-body {
-    height: 100vh;
+main {
+    height: 100%;
     background-image: url('/Assets/IMG/backgroundDificuldade.png');
     background-size: cover;
     background-position: center;
