--- a/Assets/CSS/Styles.css
+++ b/Assets/CSS/Styles.css
@@ -1,7 +1,7 @@
 main {
     width: 100%, ;
     height: 100%;
-    background-image: url('/Assets/IMG/backgroundInicio.png');
+    background-image: url('./Assets/IMG/backgroundInicio.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -18,7 +18,7 @@ main {
     font-weight: bold;
     align-content: center;
     justify-content: space-between;
-    background-image: url(/Assets/IMG/caixa.jpg);
+    background-image: url(./Assets/IMG/caixa.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
