--- a/Assets/CSS/jogo.css
+++ b/Assets/CSS/jogo.css
@@ -4,10 +4,11 @@ main {
     padding-top: 2em;
     padding-bottom: 2em;
     flex-direction: column;
-    width: 100%;
+    height: 100%;
+
     align-items: center;
     justify-content: center;
-    background-image: url('./Assets/IMG/tema.png');
+    background-image: url('../IMG/tema.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -65,7 +66,7 @@ main {
 }
 
 .back {
-    background-image: url("./Assets/IMG/misterio.png");
+    background-image: url("../IMG/misterio.png");
     background-size: cover;
     width: 100%;
     height: 100%;
